--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.11.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
